Changes in 4.6.2
----------------
** Bug
    * [FELIX-6375] - Configuration Admin Service not available with org.apache.felix.webconsole_4.6.0.all


Changes in 4.6.0
----------------
** Improvement
    * [FELIX-6366] - Update to jQuery 3.5.1 and jQuery migrate 3.3.0
    * [FELIX-6363] - Simplify updating of OSGi configurations through REST API
    * [FELIX-6370] - Provide a User interface for checks within plugins
** Bug
    * [FELIX-6341] - ConfigAdmin - deleting a configuration logs a string that should be translated
    * [FELIX-6328] - Web Console (All In One) imports javax.portlet via fileupload


Changes in 4.5.4
----------------
** Bug
    * [FELIX-6303] - Configuration console silently ignores invalid properties 
** Improvement
    * [FELIX-6299] - Prevent duplicate printing of configuration details


Changes in 4.5.2
----------------
** Bug
    * [FELIX-6270] - webconsole-all bundle doesn't contain required package
    * [FELIX-6271] - Make sure invalid bundles are deleted in BundleServlet

Changes in 4.5.0
----------------
** Improvement
    * [FELIX-6254] - Package refresh does not attach fragments
    * [FELIX-6255] - Allow to update a specific bundle through the UI
    * [FELIX-6260] - Require Java 8 and OSGi R6
    * [FELIX-6268] - Add a link to the configuration json serializer if available

Changes in 4.4.0
----------------
** Improvement
    * [FELIX-6232] - Allow Webconsole to install parallel versions of bundles
** Bug
    * [FELIX-6185] - jQuery <3.4.0 is vulnerable to prototype pollution attacks
    * [FELIX-5661] - The heuristic to derive the password type from the metatype id does not work reliably

Changes in 4.3.16
-----------------
** Bug
    * [FELIX-6171] - Webconsole OsgiManager throws NPE
    * [FELIX-6172] - Already Registered Servlet Exception with WebConsole


Changes in 4.3.14
-----------------
** Improvement
    * [FELIX-6037] - Commons FileUpload 1.4 breaks bundle uploads