@@ -9,6 +9,9 @@ var factoryCreate = ${factoryCreate};
 var i18n = { // i18n
 	stat_ok      : '${config.status.ok}', // "Configuration Admin Service is running.";
 	stat_missing : '${config.status.missing}', //"Configuration Admin Service is not installed/running."
+    metatype_ok  : '${config.metatype.ok}',
+    metatype_missing  : '${config.metatype.missing}',
+    noconfigs    : '${config.noconfigs}',
 	save         : '${save}',
 	reset        : '${reset}',
 	del          : '${delete}',
