@@ -2,6 +2,7 @@ Changes in 4.6.2
 ----------------
 ** Bug
     * [FELIX-6375] - Configuration Admin Service not available with org.apache.felix.webconsole_4.6.0.all
+    * [FELIX-6392] - Webconsole configadmin javascript error: Uncaught TypeError: parsers is undefined
 
 
 Changes in 4.6.0
